[project]
name = "aiagent-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "uvicorn>=0.51.0",
]
